[package]
name = "bevy-momentum-platformer-template"
version = "0.1.0"
authors = ["Rose Peck <olaf223224@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }